--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,42 @@
+:root {
+  --shadow-header: 0 1rem 1rem rgba(0, 0, 0, 0.1);
+  --background-heroHome: linear-gradient(to top right, #450b7c, #563cc9, #49e9fb);
+  --background-header: linear-gradient(to right, #450b7c, #563cc9);
+  --kuningCerah: rgb(255, 160, 17);
+  --putih-mandan-ireng: rgb(231, 231, 231);
+  --hero: #111827;
+  --hitam-santai: #302f2f;
+  --putih: #fff;
+  --putih-f2: #f2f2f2;
+  --putih-900: #F2F4F7;
+  --ungu: #963EFF;
+  --kuning: #FCE354;
+  --biru-cerah: #1352FF;
+  --border: 2px solid #e4e4e7;
+  /* btn */
+  --danger: #dc3545;
+  --primary: #007bff;
+  --warning: #ffc107;
+  --dark: rgb(55 65 81);
+  --danger-hover: #c52939;
+  --primary-hover: #0070e7;
+  --warning-hover: #e2ab06;
+  --dark-hover: #2F3949;
+  --border-table: 1px solid #dee2e6;
+  --table-dark: #343a40;
+  --tr: rgba(0, 0, 0, 0.05);
+  --outline-input: #0176f4bd;
+  --outline-button: #63aeffbd;
+  --outline-warning: #ffe601f1;
+  --outline-white: rgb(207, 207, 207);
+  --outline-dark: #717172;
+  --tw-gradient-to: #06b6d4;
+  --tw-gradient-from: #0d6efd;
+  --tw-gradient-stops: #0d6efd,
+        #22d3ee,
+        #06b6d4;
+}
+
 #scroll-top {
   position: fixed;
   bottom: 1.5rem;
@@ -124,17 +163,7 @@ header .container {
           justify-content: space-between;
 }
 
-header .container .kanan {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-header .container .kanan .logo {
-  margin-right: 20px;
+header .container .logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -146,95 +175,38 @@ header .container .kanan .logo {
           justify-content: center;
 }
 
-header .container .kanan .logo img {
+header .container .logo img {
   width: 40px;
   height: 40px;
   margin-right: 10px;
 }
 
-header .container .kanan .logo h1 {
-  font-size: 1.4rem;
-  line-height: 22px;
-  color: var(--putih);
-  font-weight: 700;
-}
-
-header .container .kanan .logo h1 span {
-  background: -webkit-gradient(linear, left top, right top, from(var(--tw-gradient-stops)));
-  background: linear-gradient(to right, var(--tw-gradient-stops));
-  background-clip: text;
-  -moz-background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-header .container .kanan nav ul {
+header .container nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-header .container .kanan nav ul li {
+header .container nav ul li {
   margin: 0 10px;
 }
 
-header .container .kanan nav ul li a {
+header .container nav ul li a {
   font-weight: 500;
   color: #dadada;
 }
 
-header .container .kanan nav ul li a.active {
+header .container nav ul li a.active {
   color: var(--putih);
 }
 
-header .container .kiri {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-header .container .kiri .icon {
-  margin-right: 10px;
-  color: var(--putih);
-  cursor: pointer;
-}
-
-header .container .kiri .garis {
-  margin: 0 10px;
-  font-size: 1.4rem;
-  color: var(--putih);
-}
-
-header .container .kiri .auth a {
-  margin: 0 10px;
-  color: var(--putih);
-}
-
-header .container .kiri .profil {
-  width: 30px;
-  height: 30px;
-  margin-left: 10px;
-}
-
-header .container .kiri .profil img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-header .container .kiri .menu {
+header .container .menu {
   width: 30px;
   height: 20px;
   display: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -243,22 +215,31 @@ header .container .kiri .menu {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
-  cursor: pointer;
 }
 
-header .container .kiri .menu input {
+header .container .menu input {
   width: 100%;
   height: 130%;
   position: absolute;
   top: -3px;
   opacity: 0;
+  cursor: pointer;
 }
 
-header .container .kiri .menu span {
+header .container .menu span {
   width: 100%;
-  height: 3px;
+  height: 4px;
   border-radius: 10px;
   background-color: var(--putih);
+}
+
+header .container .menu span:nth-child(3) {
+  width: 80%;
+}
+
+.containerNavMobile.active {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .containerNavMobile {
@@ -266,18 +247,39 @@ header .container .kiri .menu span {
   height: 100vh;
   display: none;
   position: fixed;
+  -webkit-transition: .5s;
+  transition: .5s;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
+  -webkit-transform: translateX(120%);
+          transform: translateX(120%);
   background-color: rgba(0, 0, 0, 0.1);
 }
 
 .containerNavMobile .navMobile {
-  width: 40%;
-  background-color: var(--putih);
+  width: 45%;
+  height: 100%;
+  overflow-y: auto;
   padding-left: 20px;
   padding-bottom: 20px;
   padding-right: 20px;
+  -webkit-box-shadow: var(--shadow-header);
+          box-shadow: var(--shadow-header);
+  background-color: var(--putih);
+}
+
+.containerNavMobile .navMobile li {
+  margin: 10px 0;
+}
+
+.containerNavMobile .navMobile li a {
+  font-weight: 600;
+  color: #525252;
+}
+
+.containerNavMobile .navMobile li a.active {
+  color: #353535;
 }
 
 .bg-gradient-to-r {
@@ -313,6 +315,10 @@ header .container .kiri .menu span {
   line-height: 60px;
   color: var(--putih);
   margin-bottom: 20px;
+}
+
+.hero .container .caption h1.title-tentangKami {
+  font-size: 2rem;
 }
 
 .hero .container .caption h1 span {
@@ -419,6 +425,61 @@ header .container .kiri .menu span {
 .title p {
   font-size: 1.2rem;
   line-height: 30px;
+}
+
+.containerFitur {
+  width: 100%;
+  height: 100%;
+}
+
+.containerFitur .fitur {
+  width: 100%;
+  height: 100%;
+  padding-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.containerFitur .fitur .perFitur {
+  width: calc(90%/3);
+  max-height: 300px;
+  margin: 0.9rem;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: var(--shadow-header);
+          box-shadow: var(--shadow-header);
+}
+
+.containerFitur .fitur .perFitur h2 {
+  font-weight: 650;
+  margin: 30px 0 10px 0;
+  font-size: 1.4rem;
+}
+
+.containerFitur .fitur .perFitur p {
+  color: #6f6f74;
+}
+
+.containerFitur .fitur .perFitur .icon {
+  width: 60px;
+  height: 60px;
+  font-size: 1.4rem;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #ffa011;
 }
 
 .containerTopik {
@@ -1476,27 +1537,5 @@ footer .container {
 .PrivacyPolicy h2 {
   margin: 10px 0;
   font-size: 1.3rem;
-}
-
-@media (min-width: 1500px) {
-  .container {
-    max-width: 1500px;
-  }
-  section,
-  footer,
-  header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .containerKerjasama .container {
-    border-top-left-radius: 100px;
-  }
 }
 /*# sourceMappingURL=style.css.map */
