--- a/css/riset/riset.css
+++ b/css/riset/riset.css
@@ -175,8 +175,16 @@ section {
   color: var(--putih);
 }
 
+.text-dark {
+  color: var(--hitam-santai) !important;
+}
+
 .bg-biru-cerah {
   background-color: var(--biru-cerah);
+}
+
+.bg-white {
+  background-color: var(--putih) !important;
 }
 
 .btn {
