--- a/css/style.scss
+++ b/css/style.scss
@@ -433,6 +433,142 @@ header {
 
 
 
+.galeriHome {
+    width: 100%;
+    height: 100%;
+
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        .perGaleri {
+            width: calc(100%/4);
+            height: 200px;
+            object-fit: cover;
+            cursor: pointer;
+        }
+
+    }
+}
+
+
+.galeri {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    .perGaleri {
+        width: calc(100%/4);
+        height: 200px;
+        object-fit: cover;
+        cursor: pointer;
+    }
+}
+
+
+.artikelHome {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-areas:
+        "main biasa1 biasa2"
+        "main biasa3 biasa4";
+    grid-template-columns: 50% 25% 25%;
+    grid-template-rows: 250px 250px;
+    // gap: 10px;
+
+    .perArtikel {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: var(--putih-900);
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        // padding: 20px;
+        position: relative;
+
+        &::before {
+            content: "";
+            width: 100%;
+            height: 100%;
+            background-color: rgb(27, 27, 27);
+            position: absolute;
+            opacity: .6;
+        }
+
+
+        h2 {
+            padding: 0 20px;
+            font-size: 1rem;
+            line-height: 20px;
+            position: relative;
+            color: var(--putih);
+        }
+
+        .keterangan {
+            padding: 10px 20px 20px 20px;
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+
+        .icon,
+        p {
+            font-size: .7rem;
+            margin: 0 3px;
+            color: var(--putih);
+        }
+
+        &:first-child {
+            grid-area: main;
+            background-image: url("../img/galeri/calendar-works.jpg");
+
+
+
+
+            h2 {
+                font-size: 2.5rem;
+                line-height: 50px;
+                margin-bottom: 30px;
+            }
+
+            .icon,
+            p {
+                font-size: 1.2rem;
+                margin: 0 10px;
+            }
+        }
+
+        &:nth-child(2) {
+            grid-area: biasa1;
+            background-image: url("../img/galeri/p-1.jpg");
+        }
+
+        &:nth-child(3) {
+            grid-area: biasa2;
+            background-image: url("../img/galeri/p-2.jpg");
+        }
+
+        &:nth-child(4) {
+            grid-area: biasa3;
+            background-image: url("../img/galeri/p-3.jpg");
+        }
+
+        &:last-child {
+            grid-area: biasa4;
+            background-image: url("../img/galeri/p-4.jpg");
+        }
+    }
+}
 
 
 
