--- a/css/responsive/responsive.scss
+++ b/css/responsive/responsive.scss
@@ -140,6 +140,15 @@
         background-color: transparent;
     }
 
+
+    .galeri {
+
+        .perGaleri {
+            width: calc(100%/3);
+            height: 200px;
+        }
+    }
+
 }
 
 
@@ -159,9 +168,29 @@
     .containerNavMobile {
         display: flex;
     }
+
+
+    .galeri {
+
+        .perGaleri {
+            height: 150px;
+        }
+    }
 }
 
 
+
+@media(max-width:650px) {
+    .title p {
+        font-size: 1.1rem;
+        line-height: 25px;
+    }
+
+    .title h1 {
+        font-size: 1.7rem;
+        line-height: 40px;
+    }
+}
 
 @media(max-width:600px) {
     .containerNavMobile .navMobile {
@@ -176,6 +205,14 @@
         height: 30rem;
         margin-bottom: 0;
     }
+
+    .galeri {
+
+        .perGaleri {
+            width: calc(100%/2);
+            height: 200px;
+        }
+    }
 }
 
 @media(max-width:500px) {
@@ -186,6 +223,15 @@
     .containerKerjasama,
     .footer .container {
         padding: 0 15px;
+    }
+
+    .title p {
+        font-size: 1rem;
+    }
+
+    .title h1 {
+        font-size: 1.5rem;
+        line-height: 30px;
     }
 
     .containerClient .clientTitle p {
@@ -208,8 +254,30 @@
     }
 
 
+    .perFAQ {
+
+        .pertanyaan {
+            padding: 20px 10px;
+
+            .icon {
+                font-size: 1.2rem;
+            }
+        }
+
+    }
+
+
 }
 
+
+@media(max-width:450px) {
+    .galeri {
+
+        .perGaleri {
+            height: 150px;
+        }
+    }
+}
 
 @media(max-width:400px) {
     .containerNavMobile .navMobile {
@@ -257,6 +325,15 @@
         font-size: .9rem;
     }
 
+
+    .galeri {
+
+        .perGaleri {
+            width: 100%;
+            height: 200px;
+        }
+    }
+
 }
 
 
@@ -272,6 +349,13 @@
 
     footer .container p span {
         font-size: 1rem;
+    }
+
+    .perFAQ {
+
+        .jawaban {
+            padding: 10px;
+        }
     }
 }
 
@@ -309,5 +393,13 @@
 
     .kontak .container .caption button {
         width: 100%;
+    }
+
+
+    .galeri {
+
+        .perGaleri {
+            height: 150px;
+        }
     }
 }
