--- a/css/style.scss
+++ b/css/style.scss
@@ -236,6 +236,7 @@ header {
     justify-content: end;
     transform: translateX(120%);
     background-color: rgba(0, 0, 0, 0.1);
+    z-index: 9999999;
 
     .navMobile {
         width: 45%;
