--- a/css/style.scss
+++ b/css/style.scss
@@ -1527,6 +1527,40 @@ footer .container p span {
 
 
 
+// .anggota {
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     flex-wrap: wrap;
+
+//     .perAnggota {
+//         width: calc(90%/4);
+//         margin: 10px;
+
+//         img {
+//             width: 100%;
+//             height: 200px;
+//             object-fit: cover;
+//         }
+
+//         h2 {
+//             font-size: 1.1rem;
+//         }
+
+//         P {
+//             font-size: 1rem;
+//         }
+//     }
+
+// }
+
+
+
+
+
+
 
 
 
