--- a/css/login/login.css
+++ b/css/login/login.css
@@ -1,7 +1,7 @@
 /* Login Start */
 .containerLogin {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11,7 +11,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 20px 0;
   background-color: #F5F5F5;
 }
 
