--- a/css/login/login.scss
+++ b/css/login/login.scss
@@ -1,11 +1,11 @@
 /* Login Start */
 .containerLogin {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px 0;
+    // padding: 20px 0;
     background-color: #F5F5F5;
 }
 
